--- a/src/app/modules/composer/composer.component.scss
+++ b/src/app/modules/composer/composer.component.scss
@@ -2,7 +2,7 @@ m-composer {
   position: relative;
   display: block;
   margin-bottom: 16px;
-  padding: 29px 0 34px;
+  // padding: 29px 0 34px;
   border-radius: 5px;
   box-sizing: border-box;
 
