--- a/src/app/modules/composer/components/preview/preview.component.scss
+++ b/src/app/modules/composer/components/preview/preview.component.scss
@@ -1,15 +1,15 @@
 .m-composer__preview {
   position: relative;
   width: 100%;
-  height: 329px;
+  height: 300px;
 
   @include m-theme() {
     background-color: themed($m-bgColor--primary);
   }
 
-  &.m-composer__preview--portrait {
-    height: 383px;
-  }
+  // &.m-composer__preview--portrait {
+  //   height: 383px;
+  // }
 
   .m-composerPreview__image,
   .m-composerPreview__video {
