Simplify our feature flags with the unleash service

--- a/src/app/common/layout/v2-topbar/v2-topbar.component.html
+++ b/src/app/common/layout/v2-topbar/v2-topbar.component.html
@@ -85,9 +85,7 @@
         </div>
       </ng-container>
       <ng-template #loggedOutRightContainer>
-        <ng-container
-          *mIfFeature="'register_pages-december-2019'; else singleButton"
-        >
+        <ng-container *mIfFeature="'ux-2020'; else singleButton">
           <ng-container *ngIf="!onAuthPages">
             <div class="m-v2-topbar__Container__LoginWrapper">
               <a
