--- a/src/app/modules/auth/login.component.html
+++ b/src/app/modules/auth/login.component.html
@@ -1,4 +1,4 @@
-<ng-container *mIfFeature="'register_pages-december-2019'; else oldLogin">
+<ng-container *mIfFeature="'ux-2020'; else oldLogin">
   <div class="m-grid">
     <div
       class="m-grid__column-8 m-grid__column__skip-3 m-grid__column-10--tablet m-grid__column__skip-2--tablet m-grid__column-12--mobile m-grid__column__skip-1--mobile"
