(fix): settings flashing between pages

--- a/src/app/common/layout/sidebar/navigation.component.html
+++ b/src/app/common/layout/sidebar/navigation.component.html
@@ -128,7 +128,7 @@
       <li>
         <a
           class="m-sidebarNavigation__item"
-          [routerLink]="['/settings']"
+          [routerLink]="['/settings/canary']"
           [routerLinkActive]="'m-sidebarNavigation__item--active'"
           (click)="toggle()"
         >
