pro activity responsiveness adjustments

--- a/src/app/modules/newsfeed/activity/owner-block/owner-block.component.html
+++ b/src/app/modules/newsfeed/activity/owner-block/owner-block.component.html
@@ -34,7 +34,7 @@
         class="m-activityOwnerBlockPermalink__text--timestamp"
         [title]="entity.time_created * 1000 | date: 'medium'"
       >
-        {{ friendlyTime }}
+        {{ entity.time_created * 1000 | friendlydatediff }}
       </span>
       <span
         *ngIf="
