--- a/src/app/modules/newsfeed/activity/metrics/metrics.component.html
+++ b/src/app/modules/newsfeed/activity/metrics/metrics.component.html
@@ -1,3 +1,3 @@
 <span class="m-activityMetrics__views" *ngIf="views$ | async as views"
-  >{{ views | number }} views</span
+  >{{ views | abbr }} views</span
 >
