(fix): discovery icon is a different colour

--- a/src/app/common/components/icon/icon.component.html
+++ b/src/app/common/components/icon/icon.component.html
@@ -11,6 +11,13 @@
     iconId
   }}</span>
   <span
+    *ngSwitchCase="'custom'"
+    class="m-icon__custom"
+    [ngStyle]="sizeCss"
+    [innerHTML]="getCustomSvg() | safe"
+  >
+  </span>
+  <span
     *ngSwitchCase="'assets-file'"
     class="m-icon__assetsFile"
     [ngStyle]="maskAndSizeCss"
