--- a/src/app/common/layout/sidebar/navigation.component.html
+++ b/src/app/common/layout/sidebar/navigation.component.html
@@ -88,12 +88,12 @@
           (click)="toggle()"
         >
           <m-tooltip
-            iconSrc="assets/icons/wire.svg"
             i18n="@@COMMON__WALLET"
             [enabled]="layoutMode === 'tablet'"
             [anchor]="'left'"
             [useParentPosition]="true"
           >
+            <m-icon from="custom" iconId="wallet" m-tooltip--icon></m-icon>
             Wallet
           </m-tooltip>
 
