(chore): various discovery fixes and improvements

--- a/src/app/common/components/tabs/tabs.component.scss
+++ b/src/app/common/components/tabs/tabs.component.scss
@@ -19,8 +19,8 @@
 }
 .m-tabs__tab > a {
   cursor: pointer;
-  padding: 13px 20px;
-  margin-right: 0 26px;
+  padding: 13px 0;
+  margin-right: 20px;
   box-sizing: border-box;
   display: block;
   font-size: 15px;
