--- a/src/app/common/layout/layout.scss
+++ b/src/app/common/layout/layout.scss
@@ -67,6 +67,11 @@ $layoutRightFullWidth: 310px;
     width: auto;
     padding-right: $minds-padding;
   }
+  @media screen and (max-width: $layoutMin2ColWidth) {
+    m-body & {
+      padding: 0;
+    }
+  }
 }
 
 [class*='m-pageLayout__pane'] {
