--- a/src/app/modules/discovery/discovery.component.html
+++ b/src/app/modules/discovery/discovery.component.html
@@ -7,6 +7,7 @@
     <router-outlet></router-outlet>
   </div>
   <div class="m-discovery__sidebar" m-pageLayout__pane="right">
+    <m-discovery__sidebarTags></m-discovery__sidebarTags>
     <m-suggestions__sidebar></m-suggestions__sidebar>
   </div>
 </div>
