[Sprint/RollingRabbit](fix): Blocked channels eternally loading. #2244

--- a/src/app/modules/settings/blocked-channels/blocked-channels.component.html
+++ b/src/app/modules/settings/blocked-channels/blocked-channels.component.html
@@ -1,4 +1,7 @@
-<div class="m-settings--section m-border m-settings__blockedChannels">
+<div
+  class="m-settings--section m-border m-settings__blockedChannels"
+  data-cy="data-minds-blocked-channels"
+>
   <h4 i18n>Blocked Channels</h4>
 
   <div class="m-settingsBlockedChannels__List">
