--- a/src/app/modules/settings/settings.component.html
+++ b/src/app/modules/settings/settings.component.html
@@ -88,6 +88,7 @@
           class="m-page--sidebar--navigation--item"
           routerLink="/settings/blocked-channels"
           routerLinkActive="m-page--sidebar--navigation--item-active"
+          data-cy="data-minds-settings-banned-channels"
         >
           <i class="material-icons">block</i>
           <span i18n>Blocked Channels</span>
