(feat): disable Continue when either phone input is dirty or the date is invalid (fix): date of birth should be optional

--- a/src/app/modules/onboarding-v2/page/onboarding.component.scss
+++ b/src/app/modules/onboarding-v2/page/onboarding.component.scss
@@ -298,8 +298,12 @@ m-onboarding {
           display: flex;
           flex-direction: column;
 
-          &:not(:first-child) {
+          &:not(:first-child):not(.m-onboardingControl__location) {
             padding-top: 20px;
+          }
+
+          &.m-onboardingControl__location {
+            padding-top: 0;
           }
 
           &.m-onboarding__avatar {
