--- a/src/app/modules/onboarding-v2/steps/info/phone-input/input.component.html
+++ b/src/app/modules/onboarding-v2/steps/info/phone-input/input.component.html
@@ -15,7 +15,12 @@
   </div>
   <div class="m-onboarding__phoneInput">
     <div class="m-onboarding__input">
-      <m-phoneInput [(ngModel)]="number" ngDefaultControl></m-phoneInput>
+      <m-phoneInput
+        [ngModel]="number"
+        (ngModelChange)="numberChange($event)"
+        ngDefaultControl
+        #input
+      ></m-phoneInput>
 
       <div class="m-onboarding__spinnerWrapper" *ngIf="inProgress">
         <div class="mdl-spinner mdl-js-spinner is-active" [mdl]></div>
@@ -32,7 +37,10 @@
         Verify
       </button>
     </div>
-    <div class="m-onboarding__error" *ngIf="numberError">
+    <div
+      class="m-onboarding__error"
+      [style.visibility]="numberError && !this.error ? 'visible' : 'hidden'"
+    >
       {{ numberError }}
     </div>
   </div>
@@ -61,9 +69,21 @@
         placeholder="eg. 198349"
         i18n-placeholder
       />
-      <div class="m-onboarding__error" *ngIf="codeError">
+
+      <div
+        class="m-onboarding__error"
+        [style.visibility]="codeError && !this.error ? 'visible' : 'hidden'"
+      >
         {{ codeError }}
       </div>
     </div>
   </ng-container>
 </ng-template>
+<div
+  class="m-onboarding__error"
+  [style.visibility]="
+    error && error === 'verify:phonenumber' ? 'visible' : 'hidden'
+  "
+>
+  <span i18n>You must verify your phone number</span>
+</div>
