--- a/src/app/modules/layout/topbar-wrapper/topbar.component.html
+++ b/src/app/modules/layout/topbar-wrapper/topbar.component.html
@@ -4,10 +4,9 @@
       <m-search--bar [defaultSizes]="false"></m-search--bar>
     </ng-container>
 
-    <ng-container icons>
-      <m-notifications--topbar-toggle
-        *ngIf="session.isLoggedIn()"
-      ></m-notifications--topbar-toggle>
+    <ng-container icons *ngIf="session.isLoggedIn()">
+      <m-composer__topbarButton></m-composer__topbarButton>
+      <m-notifications--topbar-toggle></m-notifications--topbar-toggle>
     </ng-container>
   </m-v3topbar>
 </ng-container>
