--- a/src/app/modules/discovery/tags/sidebar-tags.component.html
+++ b/src/app/modules/discovery/tags/sidebar-tags.component.html
@@ -1,29 +1,28 @@
-<div class="m-discovery__sidebarTags">
-  <h2>Trending Tags</h2>
-
-  <ul>
-    <li
-      *ngFor="let tag of trending$ | async | slice: 0:limit"
-      class="m-discoveryTrends__trend"
-    >
-      <a
-        routerLink="/discovery/search"
-        [queryParams]="{ q: '#' + tag.value, f: 'top' }"
+<m-sidebarWidget title="Trending Tags">
+  <div class="m-sidebarWidget__body">
+    <ul>
+      <li
+        *ngFor="let tag of trending$ | async | slice: 0:limit"
+        class="m-discoveryTrends__trend"
       >
-        <div>
-          <h4>#{{ tag.value }}</h4>
-          <div class="m-discoveryTrendListItem__supportingText--below">
-            <span>{{ tag.posts_count }} posts</span>
+        <a
+          routerLink="/discovery/search"
+          [queryParams]="{ q: '#' + tag.value, f: 'top' }"
+        >
+          <div>
+            <h4>#{{ tag.value }}</h4>
+            <div class="m-discoveryTrendListItem__supportingText--below">
+              <span>{{ tag.posts_count }} posts</span>
+            </div>
           </div>
-        </div>
-      </a>
-    </li>
-  </ul>
-
+        </a>
+      </li>
+    </ul>
+  </div>
   <a
-    class="m-discoverySidebarTags__seeMore"
+    class="m-sidebarWidget__seeMore"
     (click)="seeMore()"
     *ngIf="limit === 5 && !(inProgress$ | async)"
     >See more</a
   >
-</div>
+</m-sidebarWidget>
