--- a/src/app/modules/discovery/tags/sidebar-tags.component.scss
+++ b/src/app/modules/discovery/tags/sidebar-tags.component.scss
@@ -1,25 +1,6 @@
 m-discovery__sidebarTags {
-  display: contents;
-}
-
-.m-discovery__sidebarTags {
-  padding: 20px;
-  position: relative;
-  box-sizing: border-box;
-  padding: 20px;
-  border-radius: 4px;
-
-  @include m-theme() {
-    background-color: themed($m-bgColor--secondary);
-  }
-
-  h2 {
-    font-size: 18px;
-    line-height: 24px;
-    margin: 0 0 20px;
-    @include m-theme() {
-      color: themed($m-textColor--primary);
-    }
+  .m-sidebarWidget__body {
+    min-height: 260px;
   }
 
   ul {
@@ -27,6 +8,7 @@ m-discovery__sidebarTags {
     margin: 0;
     padding: 0;
   }
+
   .m-discoveryTrends__trend {
     @include m-theme() {
       border-bottom: 0;
@@ -37,12 +19,5 @@ m-discovery__sidebarTags {
         margin-top: 0;
       }
     }
-  }
-
-  .m-discoverySidebarTags__seeMore {
-    text-align: right;
-    width: 100%;
-    display: block;
-    cursor: pointer;
   }
 }
