--- a/src/app/modules/newsfeed/activity/content/content.component.scss
+++ b/src/app/modules/newsfeed/activity/content/content.component.scss
@@ -8,19 +8,22 @@ m-activity__content {
     // overflow: hidden;
     display: flex;
     flex-direction: column;
+    height: auto;
+    min-height: 0;
   }
 
   .m-activityContent__media--video,
   .m-activityContent__media--image,
   .m-activityContent__media--richEmbed,
   .m-activityContent__remind {
-    flex: 1;
+    flex-shrink: 1;
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
   }
   .m-activityContent__media--image img {
+    max-height: 100%;
     height: 100%;
-    max-height: unset;
   }
   .m-activityContent__fixedHeightSpacer {
     flex: 1;
@@ -110,7 +113,6 @@ m-activity__content {
 }
 
 .m-activityContent__media--richEmbed {
-  margin-top: 16px;
   img {
     width: 100%;
     height: 220px;
@@ -143,8 +145,31 @@ m-activity__content {
       color: themed($m-textColor--tertiary) !important;
     }
   }
+
+  // Fixed height remind workarounds
+  .m-activity--fixedHeight .m-activityContent__remind--hasMessage & {
+    .m-rich-embed-src {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      height: 80px;
+      padding: 10px;
+      position: relative;
+
+      .thumbnail {
+        width: 30%;
+        img {
+          height: 80px;
+          border-radius: 4px;
+        }
+      }
+      .meta {
+        flex: 1;
+      }
+    }
+  }
 }
 
 .m-activityContent__remind {
-  padding: 16px $activity-padding-lr 16px;
+  padding: 0 $activity-padding-lr 16px;
 }
