--- a/src/app/modules/newsfeed/activity/metrics/metrics.component.html
+++ b/src/app/modules/newsfeed/activity/metrics/metrics.component.html
@@ -1,3 +1,9 @@
-<span class="m-activityMetrics__views" *ngIf="views$ | async as views"
-  >{{ views | abbr }} views</span
->
+<ng-container *ngIf="(entity$ | async).boosted; else viewsCount">
+  Boosted
+</ng-container>
+
+<ng-template #viewsCount>
+  <span class="m-activityMetrics__views" *ngIf="views$ | async as views"
+    >{{ views | abbr }} views</span
+  >
+</ng-template>
