--- a/src/app/modules/newsfeed/boost-rotator/boost-rotator.component.scss
+++ b/src/app/modules/newsfeed/boost-rotator/boost-rotator.component.scss
@@ -1,3 +1,7 @@
+m-newsfeed--boost-rotator {
+  display: contents;
+}
+
 .m-boost-rotator-item {
   transition: opacity 0.5s ease;
   opacity: 1;
@@ -201,4 +205,9 @@
   margin-top: -14px;
   padding: 8px;
   cursor: pointer;
+}
+
+.m-newsfeed__boostRotator {
+  width: 100%;
+  margin-bottom: 20px; // Make 20px constant
 }
