--- a/src/app/modules/newsfeed/single/single.component.html
+++ b/src/app/modules/newsfeed/single/single.component.html
@@ -59,7 +59,8 @@
         [entity]="activity"
         [displayOptions]="{
           fixedHeight: fixedHeight,
-          showOnlyCommentsInput: fixedHeight
+          showOnlyCommentsInput: false,
+          showComments: false
         }"
         [allowAutoplayOnScroll]="false"
         [autoplayVideo]="true"
