--- a/src/app/modules/notices/sidebar.component.html
+++ b/src/app/modules/notices/sidebar.component.html
@@ -1,8 +1,4 @@
-<div class="m-notices__sidebar" *ngIf="!hidden">
-  <h3 class="m-newsfeedSidebar__header">
-    <span>Notices</span>
-    <i (click)="hide()" class="material-icons">close</i>
-  </h3>
+<ng-template #noticesBody>
   <span *ngIf="!inProgress && !notices.length" class="m-noticesSidebar__empty">
     There are no notices
   </span>
@@ -27,11 +23,39 @@
     [mdl]
     [hidden]="!inProgress"
   ></div>
-  <span
-    class="m-notices__loadMore"
-    (click)="showAll()"
-    *ngIf="displayLimit === 3"
-  >
-    Show more
-  </span>
-</div>
+</ng-template>
+
+<!-- Outlets -->
+
+<ng-container *ngIf="!hidden">
+  <ng-container *mIfFeature="'navigation'; else legacyNavigation">
+    <m-sidebarWidget title="Notices">
+      <div class="m-sidebarWidget__body m-sidebarWidget__body--noPadding">
+        <ng-container *ngTemplateOutlet="noticesBody"></ng-container>
+      </div>
+      <a
+        class="m-sidebarWidget__seeMore"
+        (click)="showAll()"
+        *ngIf="displayLimit === 3"
+      >
+        See more
+      </a>
+    </m-sidebarWidget>
+  </ng-container>
+  <ng-template #legacyNavigation>
+    <div class="m-notices__sidebar">
+      <h3 class="m-newsfeedSidebar__header">
+        <span>Notices</span>
+        <i (click)="hide()" class="material-icons">close</i>
+      </h3>
+      <ng-container *ngTemplateOutlet="noticesBody"></ng-container>
+      <span
+        class="m-notices__loadMore"
+        (click)="showAll()"
+        *ngIf="displayLimit === 3"
+      >
+        Show more
+      </span>
+    </div>
+  </ng-template>
+</ng-container>
