--- a/src/app/modules/composer/composer.component.scss
+++ b/src/app/modules/composer/composer.component.scss
@@ -3,11 +3,12 @@ m-composer {
   display: block;
   margin-bottom: 16px;
   // padding: 29px 0 34px;
-  border-radius: 5px;
+  border-radius: 4px;
   box-sizing: border-box;
 
   @include m-theme() {
     background: themed($m-bgColor--secondary);
+    border: 1px solid themed($m-borderColor--tertiary);
   }
 
   @media screen and (max-width: $max-mobile) {
