--- a/src/app/modules/discovery/tags/tags.component.html
+++ b/src/app/modules/discovery/tags/tags.component.html
@@ -19,7 +19,7 @@
 <section class="m-discoveryTags__section">
   <div class="m-discoveryTags__sectionHeader">
     <h3>Your Tags</h3>
-    <m-tooltip icon="settings">
+    <m-tooltip icon="settings" (click)="openTagSettings()">
       Manage Tags
     </m-tooltip>
   </div>
