--- a/src/app/modules/discovery/tags/tags.component.scss
+++ b/src/app/modules/discovery/tags/tags.component.scss
@@ -36,3 +36,9 @@
   padding: 0;
   margin: 0;
 }
+
+.m-discoveryTags__list--user {
+  .m-discoveryTrends__trend a > div {
+    align-self: center;
+  }
+}
