--- a/src/app/modules/discovery/trends/trends.component.html
+++ b/src/app/modules/discovery/trends/trends.component.html
@@ -1,9 +1,17 @@
 <div class="m-tabs__container">
   <div class="m-tabs__tab">
-    <a routerLink="./" routerLinkActive="m-tabs__tab--selected">Just for you</a>
+    <a
+      routerLink="./"
+      routerLinkActive="m-tabs__tab--selected"
+      data-cy="discovery-tab-link-overview"
+      >Just for you</a
+    >
   </div>
   <div class="m-tabs__tab">
-    <a routerLink="../tags" routerLinkActive="m-tabs__tab--selected"
+    <a
+      routerLink="../tags"
+      routerLinkActive="m-tabs__tab--selected"
+      data-cy="discovery-tab-link-tags"
       >Discover by tags</a
     >
   </div>
