--- a/src/app/modules/discovery/tags/settings.component.html
+++ b/src/app/modules/discovery/tags/settings.component.html
@@ -4,16 +4,22 @@
   </div>
 
   <div class="m-modalV2__body">
+    <m-loadingSpinner [inProgress]="inProgress$ | async"> </m-loadingSpinner>
+
     <section class="m-discoveryTagSettings__section">
       <h3>Add Custom Tag</h3>
       <input
         #value
         placeholder="Enter a tag here..."
         (keypress)="onKeypress(value, $event)"
+        data-cy="discovery-settings-input"
       />
     </section>
 
-    <section class="m-discoveryTagSettings__section">
+    <section
+      class="m-discoveryTagSettings__section"
+      data-cy="discovery-settings-section--selected"
+    >
       <h3>Your Tags</h3>
       <ul class="m-discoveryTagSettings__list">
         <li
@@ -23,14 +29,20 @@
           <div>
             <span>#{{ tag.value }}</span>
           </div>
-          <i class="material-icons" (click)="removeTag(tag)"
+          <i
+            class="material-icons"
+            (click)="removeTag(tag)"
+            data-cy="discovery-settings-remove-button"
             >remove_circle_outline</i
           >
         </li>
       </ul>
     </section>
 
-    <section class="m-discoveryTagSettings__section">
+    <section
+      class="m-discoveryTagSettings__section"
+      data-cy="discovery-settings-section--other"
+    >
       <h3>Other Tags</h3>
       <ul class="m-discoveryTagSettings__list">
         <li
@@ -40,7 +52,12 @@
           <div>
             <span>#{{ tag.value }}</span>
           </div>
-          <i class="material-icons" (click)="addTag(tag)">add_circle_outline</i>
+          <i
+            class="material-icons"
+            (click)="addTag(tag)"
+            data-cy="discovery-settings-add-button"
+            >add_circle_outline</i
+          >
         </li>
       </ul>
     </section>
@@ -51,7 +68,7 @@
     <m-shadowboxSubmitButton
       [saving]="saving$ | async"
       (click)="onSave($event)"
-      data-cy="discovery-manage-tags-save-button"
+      data-cy="discovery-settings-save-button"
     >
       <ng-container i18n>Save Tags</ng-container>
     </m-shadowboxSubmitButton>
