(fix): comments not working on single view activity pages

--- a/src/app/modules/newsfeed/single/single.component.html
+++ b/src/app/modules/newsfeed/single/single.component.html
@@ -60,7 +60,7 @@
         [displayOptions]="{
           fixedHeight: fixedHeight,
           showOnlyCommentsInput: false,
-          showComments: false
+          showComments: !fixedHeight
         }"
         [allowAutoplayOnScroll]="false"
         [autoplayVideo]="true"
