(feat): search settings selectors

--- a/src/app/modules/discovery/tags/settings.component.html
+++ b/src/app/modules/discovery/tags/settings.component.html
@@ -9,6 +9,7 @@
     <section class="m-discoveryTagSettings__section">
       <h3>Add Custom Tag</h3>
       <input
+        class="m-discoveryTagSettings__input"
         #value
         placeholder="Enter a tag here..."
         (keypress)="onKeypress(value, $event)"
