--- a/src/app/modules/discovery/tags/settings.component.scss
+++ b/src/app/modules/discovery/tags/settings.component.scss
@@ -14,7 +14,7 @@ m-discovery__tagSettings {
     }
   }
 
-  input {
+  .m-discoveryTagSettings__input {
     width: 100%;
     height: 40px;
     appearance: none;
