--- a/src/app/modules/discovery/search/search.component.html
+++ b/src/app/modules/discovery/search/search.component.html
@@ -31,6 +31,8 @@
       >Groups</a
     >
   </div>
+  <div class="m-layout__spacer"></div>
+  <m-discoveryFeeds__settingsButton></m-discoveryFeeds__settingsButton>
 </div>
 
 <div class="m-goBack">
@@ -39,82 +41,11 @@
   </a>
 </div>
 
-<div class="m-discoverySearch__feed">
-  <div
+<div class="m-discoveryFeeds__feed">
+  <m-discovery__feedItem
     *ngFor="let entity$ of entities$ | async"
-    class="m-discoverySearchFeed__item"
-    [class.m-discoverySearchFeed__item--user]="entity$.value.type === 'user'"
-    [class.m-discoverySearchFeed__item--group]="entity$.value.type === 'group'"
-  >
-    <ng-container [ngSwitch]="entity$.value.type">
-      <ng-template ngSwitchCase="user">
-        <a [routerLink]="['/', entity$.value.username]">
-          <div
-            class="m-discoverySearchFeedItem__avatar"
-            [style.background-image]="
-              'url(' + cdnUrl + '/icon/' + entity$.value.guid + ')'
-            "
-          ></div>
-          <div class="m-discoverySearchFeedItem__body">
-            <h4>
-              {{ entity$.value.name }} (<u>@</u>{{ entity$.value.username }})
-            </h4>
-            <span
-              >{{ entity$.value.subscribers_count | number }} subscribers</span
-            >
-            <p>
-              {{
-                entity$.value.briefdescription.length > 140
-                  ? (entity$.value.briefdescription | slice: 0:140) + '..'
-                  : entity$.value.briefdescription
-              }}
-            </p>
-          </div>
-          <div class="m-discoverySearchFeedItem__actions">
-            <minds-button-subscribe
-              [user]="entity$.value"
-            ></minds-button-subscribe>
-          </div>
-        </a>
-      </ng-template>
-      <ng-template ngSwitchCase="group">
-        <a [routerLink]="['/groups/profile/', entity$.value.guid]">
-          <div
-            class="m-discoverySearchFeedItem__avatar"
-            [style.background-image]="
-              'url(' +
-              cdnUrl +
-              'fs/v1/avatars/' +
-              entity$.value.guid +
-              '/' +
-              entity$.value.icontime +
-              ')'
-            "
-          ></div>
-          <div class="m-discoverySearchFeedItem__body">
-            <h4>{{ entity$.value.name }}</h4>
-            <span>{{ entity$.value['members:count'] | number }} members</span>
-            <p *ngIf="entity$.value.briefdescription">
-              {{
-                entity$.value.briefdescription.length > 140
-                  ? (entity$.value.briefdescription | slice: 0:140) + '..'
-                  : entity$.value.briefdescription
-              }}
-            </p>
-          </div>
-          <div class="m-discoverySearchFeedItem__actions">
-            <i class="material-icons">chevron_right</i>
-          </div>
-        </a>
-      </ng-template>
-      <ng-template ngSwitchDefault>
-        <m-activity
-          [entity]="entity$.value"
-          [displayOptions]="{ showOnlyCommentsInput: false }"
-        ></m-activity>
-      </ng-template>
-    </ng-container>
-  </div>
+    [entity]="entity$ | async"
+  ></m-discovery__feedItem>
   <infinite-scroll
     distance="25%"
     (load)="loadMore()"
