--- a/src/app/common/layout/v3-topbar/user-menu/user-menu.component.scss
+++ b/src/app/common/layout/v3-topbar/user-menu/user-menu.component.scss
@@ -78,6 +78,7 @@ m-usermenu__v3 {
 
         &.m-userMenuDropdown__footer {
           flex-wrap: wrap;
+          padding-top: 0;
 
           a,
           span {
